--- a/styles.css
+++ b/styles.css
@@ -96,3 +96,24 @@ body {
   font-family: "Poppins", sans-serif;
   font-weight: 300;
 }
+
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 4rem;
+}
+
+.modal-content {
+  background-color: var(--bg-color);
+  padding: 2rem;
+  border: 1px solid var(--border-color);
+  max-width: 500px;
+  width: 90%;
+}
