--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,7 @@ body {
   justify-content: flex-start;
   align-items: center;
   padding-left: 4rem;
+  pointer-events: none;
 }
 
 .modal-content {
@@ -116,4 +117,5 @@ body {
   border: 1px solid var(--border-color);
   max-width: 500px;
   width: 90%;
+  pointer-events: auto;
 }
