added styles for the animated gradient in dark mode

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,20 @@ body {
   border: 1px solid var(--border-color);
   box-sizing: border-box;
   padding: 2rem;
+  background: linear-gradient(45deg, #232b2b, #000000);
+  background-size: 300% 300%;
+  animation: color 8s ease-in-out infinite;
+}
+@keyframes color {
+  0% {
+    background-position: 0 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0 50%;
+  }
 }
 
 .header {
