--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
-  --bg-color: #ffffff;
-  --text-color: #000000;
-  --border-color: #000000;
+  --bg-color: #eeede5;
+  --text-color: #232b2b;
+  --border-color: #232b2b;
   --button-bg: #ffffff;
 }
 
@@ -10,6 +10,16 @@
   --text-color: #eeede5;
   --border-color: #eeede5;
   --button-bg: #232b2b;
+}
+
+.container-gradient-dark {
+  background: linear-gradient(45deg, #232b2b, #000000);
+  background-size: 300% 300%;
+}
+
+.container-gradient-light {
+  background: linear-gradient(45deg, #eeede5, rgb(94, 91, 91));
+  background-size: 300% 300%;
 }
 
 body {
@@ -33,20 +43,6 @@ body {
   border: 1px solid var(--border-color);
   box-sizing: border-box;
   padding: 2rem;
-  background: linear-gradient(45deg, #232b2b, #000000);
-  background-size: 300% 300%;
-  animation: color 8s ease-in-out infinite;
-}
-@keyframes color {
-  0% {
-    background-position: 0 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0 50%;
-  }
 }
 
 .header {
@@ -68,7 +64,7 @@ body {
   font-size: 1rem;
   color: var(--text-color);
   opacity: 0.7;
-  font-weight: 100;
+  font-weight: 300;
 }
 
 .nav {
