added styles to close modal button

--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,18 @@ body {
   font-weight: 600;
 }
 
+button.close-modal {
+  background: var(--button-bg);
+  border: 1px solid var(--border-color);
+  color: var(--text-color);
+  font-size: 0.9rem;
+  padding: 0.5rem 1rem;
+  border-radius: 2rem;
+  cursor: pointer;
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+}
+
 .name-surname {
   margin-bottom: 0;
   font-size: 1.5rem;
