--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
   --bg-color: #eeede5;
   --text-color: #232b2b;
   --border-color: #232b2b;
-  --button-bg: #ffffff;
+  --button-bg: #eeede5;
 }
 
 [data-theme="dark"] {
@@ -14,12 +14,12 @@
 
 .container-gradient-dark {
   background: linear-gradient(45deg, #232b2b, #000000);
-  background-size: 300% 300%;
+  background-size: 200% 100%;
 }
 
 .container-gradient-light {
   background: linear-gradient(45deg, #eeede5, rgb(94, 91, 91));
-  background-size: 300% 300%;
+  background-size: 200% 100%;
 }
 
 body {
@@ -109,27 +109,31 @@ body {
   font-weight: 300;
 }
 
-/* Modals */
 .modal {
-  display: none;
+  display: flex;
+  flex-shrink: 1;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  max-width: calc(100% - 8rem);
+  max-height: calc(100% - 4rem);
   background-color: transparent;
   justify-content: flex-start;
   align-items: center;
-  padding-left: 4rem;
+  padding: 0 4rem 0 4rem;
   pointer-events: none;
+  overflow: auto;
 }
 
 .modal-content {
   background-color: var(--bg-color);
   padding: 2rem;
   border: 1px solid var(--border-color);
-  max-width: 500px;
-  width: 90%;
+  width: 500px;
+  height: 400px;
+  overflow-y: auto;
   pointer-events: auto;
 }
 
