--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,9 @@ body {
 }
 
 .modal-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background-color: var(--bg-color);
   padding: 2rem;
   border: 1px solid var(--border-color);
@@ -152,6 +155,7 @@ button.close-modal {
   cursor: pointer;
   font-family: "Poppins", sans-serif;
   font-weight: 300;
+  margin-left: auto;
 }
 
 .name-surname {
@@ -162,10 +166,6 @@ button.close-modal {
 .name-place {
   margin-top: 0.2rem;
   font-size: 0.8rem;
-}
-
-.tech-stack {
-  font-weight: 800;
 }
 
 .email-tag {
@@ -199,6 +199,7 @@ button.close-modal {
 }
 
 .tech-stack {
+  font-weight: 800;
   font-size: 0.9rem;
   margin-bottom: 1rem;
   font-weight: 800;
